添加邮件功能

--- a/conf/config.conf
+++ b/conf/config.conf
@@ -5,3 +5,15 @@ report_file = report1.xlsx
 [test_process]
 data_file= case_process.xlsx
 report_file = report_process.xlsx
+
+# 执行哪个用例，可以是模糊匹配，如 *api.py  test*
+rule = test_api.py
+
+[email]
+SMTP_host = smtp.mxhichina.com
+from_addr = test@choicesoft.com.cn
+password = Choice2017
+to_addrs = shp@choicesoft.com.cn
+
+
+
