--- a/conf/config.conf
+++ b/conf/config.conf
@@ -7,7 +7,8 @@ data_file= case_process.xlsx
 report_file = report_process.xlsx
 
 # 执行哪个用例，可以是模糊匹配，如 *api.py  test*
-rule = test_api.py
+[run]
+rule = test_process.py
 
 [email]
 SMTP_host = smtp.mxhichina.com
