--- a/conf/config.conf
+++ b/conf/config.conf
@@ -3,12 +3,12 @@ data_file = case1.xlsx
 report_file = report1.xlsx
 
 [test_process]
-data_file= case_smdc.xlsx
+data_file= case_smdc4.xlsx
 report_file = report_process.xlsx
 
 # 执行哪个用例，可以是模糊匹配，如 *api.py  test*
 [run]
-rule = test_api.py
+rule = test_process.py
 
 [email]
 SMTP_host = smtp.mxhichina.com
